Fix for #1499 (Profile group badge overlapping)
Adds a 5px right margin to badges.

--- a/less/common/Badge.less
+++ b/less/common/Badge.less
@@ -2,6 +2,7 @@
   .Badge--size(22px);
   background: @muted-color;
   color: #fff;
+  margin-right: 5px;
   display: inline-block;
   vertical-align: middle;
   text-align: center;
